--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
 body {
     background-color: yellow;
 }
+
+.container {
+    align-content: center;
+    width: 75%;
+    height: 200px;
+    background-color: lightblue; 
+}
