--- a/style.css
+++ b/style.css
@@ -1,15 +1,49 @@
 body {
-    color: black; 
     background-color:lightgray;
+    color: black; 
+    margin: auto;
+    width: 50%;
+    
 }
 
 .quiz_wrapper {
-    align-content: center;
-    width: 75%;
+    background-color: lightblue;
+    border-style: solid;
     height: 200px;
-    background-color: lightblue; 
+    padding: 5%;
+    width: 75%;    
 }
 
 button {
     background-color: purple;
+    border-radius: 4px;
+    border-style: outset;
+    border-width: medium;
+    color: white;     
+    font-size: larger;
+    padding: 2%;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
 }
+
+.options {
+    color: black;
+    font-size: larger;
+    text-transform: uppercase;
+}
+
+ul:hover {
+    list-style-type: circle;
+}
+
+
+
+
+.question {
+    color: black;
+    font-weight: bolder;
+    font-size: larger;
+}
+
+
+
+
