--- a/style.css
+++ b/style.css
@@ -11,7 +11,12 @@ body {
     border-style: solid;
     height: 200px;
     padding: 5%;
-    width: 75%;    
+    align-content: center;    
+}
+
+h1 {
+    color: purple;
+    text-align-last: center;
 }
 
 button {
@@ -35,15 +40,10 @@ ul:hover {
     list-style-type: circle;
 }
 
-
-
-
 .question {
     color: black;
     font-weight: bolder;
     font-size: larger;
 }
-
-
 
 
